@@ -10,7 +10,7 @@ description = 'Search'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -43,4 +43,10 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs += [
+            "--add-opens=java.base/java.math=ALL-UNNAMED"
+    ]
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
